<resources>
    <string name="app_name">Route Contact</string>
    <string name="save">Save</string>
    <string name="description">Description</string>
    <string name="contact_phone_number">Phone number</string>
    <string name="contact_name">Contact name</string>
    <string name="add_new_contact">New contact</string>
    <string name="name">Name</string>
    <string name="number">Number</string>
    <string name="back">Back</string>
    <string name="national_code" translatable="false">+20 </string>
</resources>